# PDP-LQR

./: CMakeLists.txt  README.md
cmake/: pdpLQRConfig.cmake.in
examples/: CMakeLists.txt  clqr_example.cpp  lqr_example.cpp  simple_example.cpp  test_example.cpp
include/clqr/: convex_set.hpp  lqr_model.hpp  lqr_model_new.hpp  osclqr.hpp  osclqr_kernel.hpp  osclqr_solver.hpp  results.hpp  settings.hpp  typedefs.hpp
include/clqr/ignore/: clqr_parallel_kernel.hpp  clqr_parallel_solver.hpp  clqr_solver.hpp  utils.hpp
include/clqr/lqr/: condensed_system.hpp  kkt.hpp  lqr_kernel.hpp  lqr_kernel_parallel.hpp  lqr_solver.hpp  lqr_solver_parallel.hpp  qdldl_solver.hpp  qdldl_typedefs.hpp  utils.hpp
include/lqr/: clqr_kernel.hpp  lqr.hpp  lqr_model.hpp  lqr_solver_base.hpp  results.hpp  settings.hpp  status.hpp
tests/: CMakeLists.txt  test_lqr.cpp  test_utils.hpp
tests/data/: lqr_quadrotor_u_trj.json  lqr_quadrotor_x_trj.json
